# hax-ui

./: README.md  package.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: chat.py  router.py
backend/app/core/: database.py
backend/app/models/: chat.py
backend/app/schemas/: chat.py
backend/app/services/: gemini.py
backend/tests/: conftest.py  test_api.py
